# next-step-app

./: .gitignore  pyproject.toml
backend/: __init__.py  run_api.py
backend/app/: __init__.py
backend/app/api/: __init__.py  database.py  init_db.py  main.py  models.py  schemas.py
backend/app/api/routers/: __init__.py  articles.py  health.py  scheduler.py
backend/app/config/: __init__.py  scheduler_config.py
backend/app/data/: __init__.py  init_db.py  scraper.db  seed_sources.py
backend/app/scheduler/: README.md  __init__.py  manage_scheduler.py  next-step-scheduler.service  scheduler.py
backend/app/scrapper/: __init__.py  scrape_uk.py
backend/app/summarizer/: __init__.py
config/: uk.json
data/: scraper.db
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx
frontend/src/components/: CountryCard.css  CountryCard.tsx
frontend/src/pages/: CountryPage.css  CountryPage.tsx  Home.css  Home.tsx
frontend/src/services/: api.ts
scrapper/: scrape_uk.py  seed_sources.py  view_articles.py
