[project]
name = "next-step-app"
version = "0.1.0"
description = ""
authors = [
    {name = "olgagaga",email = "olga_kuzmich2005@tut.by"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
